# selector

./: AGENTS.md  LICENSE  README.md  hierarchy.py  prompt.txt  pyproject.toml  requirements.txt  server.py
selector/: espresso_prompt.txt  server.py
tests/: conftest.py  test_prompt.py  test_screen_hierarchy.py
